section pertanyaan selesai

--- a/css/style.css
+++ b/css/style.css
@@ -1455,7 +1455,7 @@ body {
 
 .todo-11 label::after {
   display: block;
-  content: url('public/images/cursor\ down.svg');
+  content: url('../public/images/cursor\ down.svg');
   width: 29px;
   height: 27px;
   margin: auto;
@@ -1505,7 +1505,7 @@ body {
 }
 .tab label::after {
   display: block;
-  content: url('public/images/plus.svg');
+  content: url('../public/images/plus.svg');
   width: 39px;
   height: 39px;
 
@@ -1604,7 +1604,7 @@ body {
   }
   .tab label::after {
     display: block;
-    content: url('public/images/plus.svg');
+    content: url('../public/images/plus.svg');
     width: 39px;
     height: 39px;
 
