jam live time, pewarnaan section, penggabungan komponen, slesai

--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,14 @@ body {
   border-radius: 20px;
   background: #688bfe;
 }
+.welcome6 {
+  border-radius: 20px;
+  background: #692727;
+}
+.welcome7 {
+  border-radius: 20px;
+  background: #d26500;
+}
 
 .sepeda {
   object-fit: cover;
@@ -356,21 +364,40 @@ body {
   color: white;
 }
 
+.bg-green {
+  background: #7BD252;
+  
+  color: white;
+}
+
 .bg-purple {
   background: #7353d9;
   color: white;
 }
 .bg-red {
   background: #c23939;
-
+  color: white;
+}
+.bg-red2 {
+  background: #692727;
   color: white;
 }
 .bg-yellow {
   background: #e4bb50;
   color: black;
 }
+.bg-yellow2 {
+  background: #ffd90f;
+
+  color: black;
+}
 
 .todo-11 {
+  border-radius: 20px;
+
+  /* background: #ffd90f; */
+}
+.todo-6 {
   border-radius: 20px;
 
   /* background: #ffd90f; */
@@ -380,15 +407,16 @@ body {
   font-style: normal;
   font-weight: 600;
 }
-
-.isi-todo-11 p {
+.isi-todo-6 {
+  color: #c23939;
   font-family: Poppins;
-  font-size: 15px;
+  font-size: 20px;
   font-style: normal;
-  font-weight: 500;
-  min-height: 200px;
-  max-height: 200px;
-  overflow-y: scroll;
+  font-weight: 600;
+}
+
+.isi-todo-6 .row {
+  border-radius: 20px;
 }
 
 .isi-todo-11 p::-webkit-scrollbar {
@@ -455,6 +483,12 @@ body {
   font-style: normal;
   font-weight: 600;
 }
+.isi-todo-7 {
+  color: #ffd90f;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+}
 .isi-todo-23 {
   color: #c23939;
   font-size: 24px;
@@ -474,9 +508,27 @@ body {
   padding: 20px 15px;
   margin: 0px 24px;
 }
+.isi2-todo7 {
+  border-radius: 20px;
+  background: #ffd90f;
+
+  padding: 20px 15px;
+  margin: 0px 24px;
+}
 
 .isi2-todo-22 svg {
   margin-left: 8px;
+}
+.isi2-todo7 svg {
+  margin-left: 8px;
+}
+
+.isi2-todo7 p {
+  color: #000;
+  font-family: Poppins;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
 }
 
 .isi2-todo22 p {
@@ -667,11 +719,29 @@ body {
   width: 150px;
   z-index: 20;
 }
+.tapa {
+  bottom: -1px;
+  right: -59px;
+  width: 150px;
+  z-index: 20;
+}
 
 .lope {
   top: -22px;
   right: -11px;
   width: 100px;
+  z-index: 20;
+}
+.macan {
+  top: -22px;
+  left: -11px;
+  width: 100px;
+  z-index: 20;
+}
+.burger {
+  top: -22px;
+  right: -25px;
+  width: 150px;
   z-index: 20;
 }
 
@@ -684,6 +754,12 @@ body {
   top: -49px;
   right: -70px;
   width: 250px;
+  z-index: 20;
+}
+.matahari {
+  top: -67px;
+  left: -79px;
+  width: 150px;
   z-index: 20;
 }
 .monyet {
@@ -726,17 +802,51 @@ body {
   width: 150px;
 }
 
+.aktivitas-todo h1 {
+  color: #fff;
+  font-family: Poppins;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 600;
+  margin: 0;
+}
+
+.aktivitas-todo p {
+  color: #fff;
+  font-family: Poppins;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  margin: 0;
+}
+
 @media only screen and (min-width: 992px) {
-  .home5 {
-    border-radius: 25px;
-    max-height: 100%;
-    width: auto;
+  .isi-todo-6 {
+    color: #c23939;
+    font-family: Poppins;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 600;
+  }
+  .aktivitas-todo h1 {
+    color: #fff;
+    font-family: Poppins;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    margin: 0;
   }
 
   .sipjempol {
     top: -22px;
     right: -70px;
     width: 200px;
+    z-index: 20;
+  }
+  .tapa {
+    bottom: -1px;
+    right: -180px;
+    width: 335px;
     z-index: 20;
   }
   .jempoltos {
@@ -749,6 +859,19 @@ body {
     top: -22px;
     right: -50px;
     width: 100px;
+    z-index: 20;
+  }
+
+  .macan {
+    top: -22px;
+    left: -30px;
+    width: 150px;
+    z-index: 20;
+  }
+  .burger {
+    top: -82px;
+    right: -99px;
+    width: 300px;
     z-index: 20;
   }
 
@@ -844,10 +967,23 @@ body {
     font-style: normal;
     font-weight: 600;
   }
+  .isi-todo-7 {
+    color: #ffd90f;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 600;
+  }
 
   .isi2-todo22 {
     border-radius: 20px;
     background: #4e37b3;
+    padding: 20px 15px;
+    margin: 0px 24px;
+  }
+  .isi2-todo7 {
+    border-radius: 20px;
+    background: #ffd90f;
+
     padding: 20px 15px;
     margin: 0px 24px;
   }
@@ -868,6 +1004,9 @@ body {
   .isi2-todo-2 svg {
     margin-left: 8px;
   }
+  .isi2-todo7 svg {
+    margin-left: 8px;
+  }
 
   .isi2-todo2 p {
     color: #fff;
@@ -882,6 +1021,13 @@ body {
 
   .isi2-todo22 p {
     color: #fff;
+    font-family: Poppins;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+  }
+  .isi2-todo7 p {
+    color: #000;
     font-family: Poppins;
     font-size: 16px;
     font-style: normal;
@@ -1134,6 +1280,11 @@ body {
     top: -30px;
     right: -117px;
     width: 300px;
+  }
+  .home5 {
+    border-radius: 25px;
+    max-height: 100%;
+    width: auto;
   }
 }
 
