--- a/css/style.css
+++ b/css/style.css
@@ -477,6 +477,11 @@ body {
   color: white;
 }
 
+.bg-orange {
+  border-radius: 20px;
+  background: #d26500;
+}
+
 .todo-11 {
   border-radius: 20px;
 
@@ -873,6 +878,12 @@ body {
   top: -49px;
   right: -70px;
   width: 250px;
+  z-index: 20;
+}
+.tilem {
+  top: -49px;
+  right: -71px;
+  width: 177px;
   z-index: 20;
 }
 .matahari {
@@ -1301,6 +1312,12 @@ body {
     right: -115px;
     width: 230px;
   }
+  .tilem {
+    top: -98px;
+    right: -111px;
+    width: 247px;
+    z-index: 20;
+  }
 
   .air {
     top: -63px;
@@ -1498,6 +1515,14 @@ body {
   font-weight: 500;
   border-radius: 20px;
   background: #0a044b;
+}
+.blog-judul9 {
+  color: #fff;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  border-radius: 20px;
+  background: #000;
 }
 .blog-title {
   width: 776px;
@@ -1703,6 +1728,16 @@ body {
 .faq-judul9 {
   border-radius: 20px;
   background: #0a044b;
+
+  color: #fff;
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+}
+.faq-judul10 {
+  border-radius: 20px;
+  background: #000;
 
   color: #fff;
   font-family: Poppins;
@@ -1948,6 +1983,11 @@ body {
 }
 .bg-faq9 {
   background: #0a044b;
+
+  color: #000;
+}
+.bg-faq10 {
+  background: #000;
 
   color: #000;
 }
